# dev-container-demo

./: README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
