[tool.poetry]
name = "dev-container-demo"
version = "0.1.0"
description = ""
authors = ["mikehentges <mhentges@comcast.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
pylint = "^3.0.3"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
